@@ -77,7 +77,7 @@
       <dictionary>
         <item>
             <key> <string>text</string> </key>
-            <value> <string>string:${object_url}/BusinessTemplate_viewMigrateAllComponentFromFilesystemDialog</string> </value>
+            <value> <string>string:${object_url}/BusinessTemplate_viewMigrateSourceCodeFromFilesystemDialog</string> </value>
         </item>
       </dictionary>
     </pickle>
